applications/sample-wordpress/mysql-clusterip-headless.yml
---
# CLUSTERIP
apiVersion: v1
kind: Service
metadata:
  name: clusterip-db
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
---
# HEADLESS
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: production
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: mysql
