applications/sample-wordpress/wp-ingress-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-wp
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: wp
  ports:
    - name: wpclusterip
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  namespace: production
spec:
  # tls:
  # - hosts:
  #   - hyukjun.me
  #   secretName: ingress-tls-secret # tls를 위해 생성한 secret, tls.key 와 tls.crt 가 저장되어 있다.
  ingressClassName: nginx
  rules:
    - host: test.hyukjun.me # 이 주소로 웹브라우저 에서 접근하기 위해선 local에서 /etc/hosts에 워커노드의 아이피 등록 필요
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: clusterip-wp
              port:
                number: 80
